# ruvscan

./: .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  MANIFEST.in  Makefile  PROJECT_STATUS.md  QUICK_START_LOCAL.md  README.md  READY_TO_PUBLISH.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruvREADME.md  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: config.yaml
docker/: Dockerfile.go  Dockerfile.python  Dockerfile.rust
docs/: ARCHITECTURE.md  BUILD_SUMMARY.md  CLAUDE_CODE_EXAMPLES.md  CLAUDE_DESKTOP_EXAMPLES.md  DATABASE_SEEDING.md  DEPLOYMENT.md  FIXES_COMPLETED.md  GITHUB_TOKEN_SETUP.md  MCP_INSTALL.md  MCP_QUICK_REFERENCE.md  MCPguide.md  QUICK_MCP_START.md  QUICK_START.md  RUST_ENGINE_STATUS.md  STATUS_UPDATE.md  TEST_RESULTS.md  USER_EXPERIENCE.md  VOICE_AGENT_SOLUTION.md  hybridarch.md  prds.md  summary.md  techarchitecture.md
docs/api/: MCP_PROTOCOL.md
docs/archive/: prdold.md
examples/: example_usage.py
k8s/: deployment.yaml
scripts/: run_mcp.sh  run_tests.sh  ruvscan  seed_database.py  setup.sh  test_quick.sh  verify_setup.sh
src/go/: go.mod  go.sum
src/go/scanner/: main.go  server.go
src/mcp/: __init__.py  mcp_stdio_server.py  monitoring.py  server.py
src/mcp/bindings/: __init__.py  rust_client.py
src/mcp/endpoints/: query.py  scan.py
src/mcp/reasoning/: __init__.py  embeddings.py  fact_cache.py  safla_agent.py
src/mcp/storage/: __init__.py  db.py  models.py
src/rust/: Cargo.toml  build.rs
src/rust/proto/: sublinear.proto
src/rust/src/: grpc_service.rs  lib.rs  main.rs  sublinear.rs
tests/: test_embeddings.py  test_env.py  test_fact_cache.py  test_integration.py  test_server.py
