[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruvscan-mcp"
version = "0.5.0"
description = "RuvScan MCP Server - Sublinear intelligence for GitHub discovery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Ruvnet", email = "support@ruvnet.ai"}
]
keywords = ["mcp", "github", "ai", "semantic-search", "sublinear", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.24.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ruvnet/ruvscan"
Documentation = "https://github.com/ruvnet/ruvscan#readme"
Repository = "https://github.com/ruvnet/ruvscan"
Issues = "https://github.com/ruvnet/ruvscan/issues"

[project.scripts]
ruvscan-mcp = "mcp.mcp_stdio_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
