[package]
name = "ruvscan-sublinear"
version = "0.5.0"
edition = "2021"
authors = ["RuvScan Team"]
description = "Sublinear intelligence engine for RuvScan"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pin base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"

# gRPC
tonic = "0.11"
prost = "0.12"

# Sublinear computation
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
rand = "0.8"
rand_distr = "0.4"

# WASM support
wasm-bindgen = "0.2"
js-sys = "0.3"

# Async and concurrency
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.11"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ruvscan-sublinear"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
